...
            "value" : "Anwenden"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Apply"
          }
        }
      }
    },
    "action.cancel" : {
      "extractionState" : "manual",
...
            "value" : "Fertig"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Done"
          }
        }
      }
    },
    "action.refresh" : {
      "extractionState" : "manual",
...
            "value" : "Wiederholen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Retry"
          }
        }
      }
    },
    "app.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "SpaceX"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "SpaceX"
...
            "value" : "Filtern & Sortieren"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Filter & Sort"
          }
        }
      }
    },
    "filter.year.title" : {
      "extractionState" : "manual",
...
            "value" : "UNTERNEHMEN"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "COMPANY"
          }
        }
      }
    },
    "section.launches.title" : {
      "extractionState" : "manual",
...
            "value" : "STARTS"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "LAUNCHES"
          }
        }
      }
    },
    "settings.about.header" : {
      "extractionState" : "manual",
...
